--- a/.travis.yml
+++ b/.travis.yml
@@ -25,13 +25,13 @@ r_packages:
   - covr
   - sessioninfo
   - data.table
-  - sl3
 
 r_github_packages:
   - r-lib/covr
   - r-lib/sessioninfo
   - osofr/simcausal
   - osofr/condensier
+  - tllverse/sl3
   - tlverse/origami
   - tlverse/delayed
   - tlverse/hal9001
