--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ warnings_are_errors: true
 r_build_args: "--no-manual"
 r_check_args: "--no-build-vignettes --no-manual"
 
+install:
+  - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
+
 r:
   - release
   - devel
