--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ r_build_args: "--no-manual"
 r_check_args: "--no-build-vignettes --no-manual"
 
 install:
-  - Rscript -e 'install.packages("devtools", repos = "http://cran.rstudio.com")'
+  - R -e 'devtools::install_deps(dep = T)'
 
 r:
   - release
