--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Imports:
     stats,
     future,
     delayed,
-    future.apply
+    future.apply,
+    Hmisc
 Depends: 
     R (>= 2.10)
 VignetteBuilder: knitr
