--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     future,
     delayed,
     future.apply,
-    Hmisc
+    Hmisc,
+    ggplot2
 Depends: 
     R (>= 2.10)
 VignetteBuilder: knitr
