--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     future.apply,
     Hmisc,
     ggplot2,
-    magrittr
+    magrittr,
+    ggforce
 Depends: 
     R (>= 2.10)
 VignetteBuilder: knitr
